test/good/classes/cmp01.px

class A def
    x: Int

a1 = A()
a2 = A()
print a1 == a1
print a2 == a1
print a1 != a2
print a2 != a2
