test/bad/classes/destructor01.px

class A def
    destructor(x: Int) def
        skip
